# DeepwokenHelper

./: .gitignore  README.md  pyproject.toml
deepwokenhelper/: __init__.py  __main__.py  data.py  logging.py  ocr.py  version_check.py
deepwokenhelper/gui/: application.py  cards_area.py  control_panel.py
