[project]
requires-python = ">=3.12"
dependencies = [
    "PyQt6~=6.9.0",
    "opencv-python~=4.11.0.86",
    "pywin32==310",
    "pynput~=1.8.1",
    "pytesseract~=0.3.13",
    "pytest~=8.3.5",
    "requests~=2.32.3",
    "imutils~=0.5.4",
    "keyboard~=0.13.5",
    "ultralytics~=8.3.144",
    "WMI~=1.5.1",
    "onnx~=1.17.0",
    "onnxruntime==1.20.1",
    "toml~=0.10.2",
    "thefuzz~=0.22.1",
    "qtwaitingspinner @ git+https://github.com/z3ntu/QtWaitingSpinner.git",
]
name = "DeepwokenHelper"
version = "1.1.1.3"
description = "Deepwoken Helper to help you choose your cards."
readme = "README.md"

[[project.authors]]
name = "Tuxsuper"
email = "69093264+Tuxsupa@users.noreply.github.com"

[project.license]
text = "GPL-3.0-only"

[tool.setuptools]
packages = ["deepwokenhelper"]

[tool.ruff.lint]
ignore = ["F405", "F403"]
